--- a/index copy.html
+++ b/index copy.html
@@ -18,7 +18,7 @@
 	<meta name="twitter:card" content="summary_large_image"> <!-- to have large image post format in Twitter -->
 
     <!-- Webpage Title -->
-    <title>Fegil.</title>
+    <title>Fegil</title>
     
     <!-- Styles -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -54,13 +54,13 @@
                         <a class="nav-link page-scroll" href="#header">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#details">About us </a>
+                        <a class="nav-link page-scroll" href="#details">Details</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#strengths">Brands</a>
+                        <a class="nav-link page-scroll" href="#strengths">Strengths</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#about">Games</a>
+                        <a class="nav-link page-scroll" href="#about">About</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Drop</a>
@@ -107,9 +107,8 @@
                 </div> <!-- end of col -->
                 <div class="col-lg-6">
                     <div class="text-container">
-                        <h3>
-                            We offer complete ecommerce solutions based on Shopify Powering the Future of Gaming, Sports Betting, and Lottery                        </h3>
-                        <a class="btn-solid-lg page-scroll" href="#details">Discover Games</a>
+                        <h3>We offer complete ecommerce solutions based on Shopify Powering the Future of Gaming, Sports Betting, and Lottery</h3>
+                        <a class="btn-solid-lg page-scroll" href="#details">Discover games</a>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -126,9 +125,7 @@
                             </div>
                             <div class="card-body">
                                 <h5 class="card-title">Seamless Betting Experience</h5>
-                                <div class="card-text">
-                                    Bet on your favorite sports, teams, and leagues with just a few clicks. Our user-friendly interface makes betting faster and more enjoyable than ever.
-                                </div>
+                                <div class="card-text">Bet on your favorite sports, teams, and leagues with just a few clicks. Our user-friendly interface makes betting faster and more enjoyable than ever.</div>
                             </div>
                         </div>
                         <!-- end of card -->
@@ -139,11 +136,9 @@
                                 <i class="fas fa-pencil-ruler"></i>
                             </div>
                             <div class="card-body">
-                                <h5 class="card-title">Innovative Lottery Platforms</h5>
+                                <h5 class="card-title"> Innovative Lottery Platforms</h5>
                                 <div class="card-text">
-                                    Discover new and traditional lottery games designed for thrill-seekers. With fair odds and transparent results, everyone has a chance to win big!
-                                </div>
-                            </div>
+                                    Discover new and traditional lottery games designed for thrill-seekers. With fair odds and transparent results, everyone has a chance to win big!                            </div>
                         </div>
                         <!-- end of card -->
 
@@ -155,8 +150,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Time Updates & Insights</h5>
                                 <div class="card-text">
-                                    Stay ahead with live game updates, predictive analytics, and expert insights, keeping you informed every step of the way.                                </div>
-                            </div>
+                                    Stay ahead with live game updates, predictive analytics, and expert insights, keeping you informed every step of the way.                            </div>
                         </div>
                         <!-- end of card -->
 
@@ -177,8 +171,8 @@
                         <h2>Sports betting </h2>
                         <hr class="hr-heading">
                         <p>
-                            Play the games you love and make money that breaks the bank. Your next huge winning is just a click away.                                           </p>
-                        <!-- <ul class="list-unstyled li-space-lg">
+                            Play the games you love and make money that breaks the bank. Your next huge winning is just a click away.                         </p>
+                        <ul class="list-unstyled li-space-lg">
                             <li class="media">
                                 <i class="fas fa-square"></i>
                                 <div class="media-body">Delivering powerful brands for popular shops</div>
@@ -195,7 +189,7 @@
                                 <i class="fas fa-square"></i>
                                 <div class="media-body">Speedy delivery of marketing design assets</div>
                             </li>
-                        </ul> -->
+                        </ul>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-6 col-xl-7">
@@ -220,11 +214,10 @@
                 </div> <!-- end of image-area -->
                 <div class="text-area">
                     <div class="text-container">
-                        <h2>Lottery </h2>
+                        <h2>Design & development</h2>
                         <hr class="hr-heading">
-                        <p>
-                            From powerball to mega millions, there's something for everyone. We make it easy for you to find lottery games that match your appetite. </p>
-                        <!-- <a class="btn-solid-reg popup-with-move-anim" href="#details-lightbox">Lightbox</a> -->
+                        <p>Our team of competent designers and developers are able to create beautiful designs and structured code that will serve your ecommerce project to establish your market position and increase revenues</p>
+                        <a class="btn-solid-reg popup-with-move-anim" href="#details-lightbox">Lightbox</a>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of text-area -->
             </div> <!-- end of row -->
@@ -280,12 +273,10 @@
             <div class="row">
                 <div class="col-lg-6 col-xl-5">
                     <div class="text-container">
-                        <h2>Scratch cards </h2>
+                        <h2>Digital marketing</h2>
                         <hr class="hr-heading">
-                        <p>
-                            Buy scratch cards, redeem scratch cards and everything in between. Scratch cards have never been so demure. 
-                        </p>
-                        <!-- <ul class="list-unstyled li-space-lg">
+                        <p>We can deliver a comprehensive marketing plan and then execute it down to the smallest details. Our marketing specialist will also conduct evaluations regularly and advise you</p>
+                        <ul class="list-unstyled li-space-lg">
                             <li class="media">
                                 <i class="fas fa-square"></i>
                                 <div class="media-body">Marketing plan for 6 months with evaluation</div>
@@ -302,7 +293,7 @@
                                 <i class="fas fa-square"></i>
                                 <div class="media-body">Loyalty programs for your favorite clients</div>
                             </li>
-                        </ul> -->
+                        </ul>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-6 col-xl-7">
@@ -321,8 +312,7 @@
         <div class="container">
             <div class="row">
                 <div class="text-container">
-                    <h4>
-                        At Fegil, our mission is to revolutionize the lottery and gaming industry in Nigeria by delivering a secure, transparent, and exciting platform that sets new standards for fairness and innovation. We are dedicated to providing exceptional gaming experiences, supported by state-of-the-art technology, superior customer service, and full compliance with national regulations. Through our commitment to responsible gaming, community investment, and delivering positive returns for all stakeholders, we strive to create a platform that not only entertains but also empowers and enriches the lives of Nigerians.                    </h4>
+                    <h4>Our mission is to deliver reliable ecommerce solutions together with the necessary consulting and marketing services which will help customers achieve long term market stability</h4>
                 </div> <!-- end of text-container -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
@@ -339,26 +329,22 @@
                         <li class="media">
                             <div class="bullet">1</div>
                             <div class="media-body">
-                                <h4>Live betting action </h4>
-                                <p>
-                                    Explore thrilling lottery and sports betting experiences tailored for Nigerian enthusiasts and players.
-                                </p>
+                                <h4>Specialized expertise</h4>
+                                <p>We've been deploying successful online shops for about 10 year and we've made it our mission to provide the best Shopify development services in the industry. Besides the shop itself we also provide branding and strategy services to create solid foundations our customers online projects</p>
                             </div>
                         </li>
                         <li class="media">
                             <div class="bullet">2</div>
                             <div class="media-body">
-                                <h4> Bonuses reward galore </h4>
-                                <p>
-                                    Our partnership with Shopify enables us to stay on top of all platform updates and prepare them for installation in your own online store. We're in permanent communication with the Shopify design and development team so we can solve any difficult situations that can occur after major updates                                </p>
+                                <h4>Shopify partner</h4>
+                                <p>Our partnership with Shopify enables us to stay on top of all platform updates and prepare them for installation in your own online store. We're in permanent communication with the Shopify design and development team so we can solve any difficult situations that can occur after major updates</p>
                             </div>
                         </li>
                         <li class="media">
                             <div class="bullet">3</div>
                             <div class="media-body">
-                                <h4>In-play betting options</h4>
-                                <p>
-                                    We take pride in delivering projects before the deadline to extend the pre-launch testing period. This ensures a smooth user experience and it also helps with bringing visitors back. You can check out or projects section below to hear straight from our customers what they think about us.                                </p>
+                                <h4>Timely delivery</h4>
+                                <p>We take pride in delivering projects before the deadline to extend the pre-launch testing period. This ensures a smooth user experience and it also helps with bringing visitors back. You can check out or <a class="red page-scroll" href="#projects">projects section</a> below to hear straight from our customers what they think about us</p>
                             </div>
                         </li>
                     </ul>
@@ -496,9 +482,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h4>
-                        Book consultation Be the first to know when we launch
-Don't hesitate to give us a call or just use the contact form below</h4>
+                    <h4>We invite you to book a consultation call with one of our Key Account Managers and we guarantee it will not be a waste of time</h4>
                     <a class="btn-solid-lg page-scroll" href="#contact">Book Consultation</a>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -553,9 +537,8 @@ Don't hesitate to give us a call or just use the contact form below</h4>
             <div class="row">
                 <div class="col-lg-12">
                     <div class="footer-col first">
-                        <h6>About Fegil </h6>
-                        <p class="p-small">
-                            At Fegil, we’re transforming gaming with innovative platforms for sports betting and lottery. Whether you’re a casual player or a seasoned bettor, you’ll find exciting ways to play and win easily with our suite of easy-to-use platforms.                        </p>
+                        <h6>About Spify</h6>
+                        <p class="p-small">Spify is a business website Bootstrap HTML template designed to present startups in a beautiful manner with features for description</p>
                     </div> <!-- end of footer-col -->
                     <div class="footer-col second">
                         <h6>Links</h6>
@@ -590,7 +573,7 @@ Don't hesitate to give us a call or just use the contact form below</h4>
                                 <i class="fab fa-instagram fa-stack-1x"></i>
                             </a>
                         </span>
-                        <p class="p-small">Contact us  <a href="mailto:fegil@betcamp.com.ng "><strong>fegil@betcamp.com.ng </strong></a></p>
+                        <p class="p-small">We would love to hear from you <a href="mailto:contact@site.com"><strong>contact@site.com</strong></a></p>
                     </div> <!-- end of footer-col -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
